# data-lagoon

./: .gitignore  .rumdl.toml  .sqlfluff  CLAUDE.md  LICENSE  README.md  anthropic_analytics_article.md  format.sh  marimo-custom.css  pyproject.toml  requirements.txt  yaml_format.sh
.claude/skills/bigquery-chart/: SKILL.md
.claude/skills/bigquery-chart/references/: chart-recipes.md
.claude/skills/bigquery-metadata/: SKILL.md
.claude/skills/bigquery-metadata/references/: dataset-catalog.md  google_analytics_sample.md  google_trends.md  london_bicycles.md  monzo_datawarehouse.md  new_york_taxi_trips.md
.claude/skills/bigquery-notebook/: SKILL.md
.claude/skills/bigquery-notebook/references/: marimo-cells.md
.claude/skills/bigquery-query/: SKILL.md
.claude/skills/bigquery-query/references/: cost-rules.md  data-integrity.md  sql-patterns.md  (+1 more)
analyses/: .gitkeep
analyses/2026-06-29-monzo-accounts-7d-active-users/: build_screenshot_pdf.py  notebook.py
analyses/2026-06-29-monzo-accounts-7d-active-users/queries/: 01_account_created.sql  02_account_closed.sql  03_account_reopened.sql  04_account_transactions.sql
analyses/google-trends-validation/queries/: 00_partitions.sql  01_top_terms.sql  02_top_rising_terms.sql  03_international_top_terms.sql  04_international_top_rising_terms.sql  05_score_null_by_rank.sql  06_score_null_by_week.sql  07_intl_score_null_by_rank_region.sql  08_score_null_week_x_rank.sql
analyses/yellow-taxi-daily-2022/: notebook.py
analyses/yellow-taxi-daily-2022/queries/: 01_daily_trips.sql
analyses/yellow-taxi-grain/queries/: 01_candidate_keys.sql
analyses/yellow-taxi-nulls/queries/: 01_nulls_group_a.sql  02_nulls_group_b.sql  03_null_cooccurrence.sql
domainspec/: _schema.json  google_analytics_sample.yaml  google_trends.yaml  london_bicycles.yaml  monzo_datawarehouse.yaml  new_york_taxi_trips.yaml
evals/: cases.yaml  run_evals.py
infra/: iam.tf  provider.tf  s3.tf
scripts/: bq_dry_run.py  bq_list.py  bq_schema.py  check_spec_doc_sync.py  gen_schema.py  new_analysis.py  spec_lookup.py
src/: covid_19.py  covid_19_tracking.py
src/covid_19/: dbt_project.yml
src/data_lagoon/: __init__.py  bq.py  catalog.py  config.py  render.py  spec.py
templates/: notebook_template.py
terraform/: bigquery.tf  budget.tf  iam.tf  outputs.tf  providers.tf  services.tf  terraform.tfvars.example  variables.tf
tests/: test_bq.py  test_render.py  test_spec.py
(+1 files in other folders)
