[project]
name = "data-lagoon"
version = "0.1.0"
description = "LLM context harness for self-service analytics over BigQuery public datasets"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "polars>=1.12",
    "duckdb>=1.1",
    "plotly>=5.24",
    "pyarrow>=17.0",
    "google-cloud-bigquery[bqstorage]>=3.25",
    "great-tables>=0.13",
    "pydantic>=2.9",
    "rich>=13.9",
    "pyyaml>=6.0",
    "numpy>=2.4.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "sqlfluff>=3.2",
    "marimo>=0.9",
    "rumdl>=0.2.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_lagoon"]

[tool.uv]
# Heavy notebook/lint deps live in the dev group; sync them by default for the harness.
default-groups = ["dev"]

# ---------------------------------------------------------------------------
# ruff — Python linter + formatter (run: uv run ruff check --fix . && uv run ruff format .)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PL", "RUF"]
ignore = [
    "PLR0913", # too many arguments — analytics helpers legitimately take many
    "PLR2004", # magic value — noisy in tests and SQL-shape assertions
    "PLC0415", # import outside top-level — we lazily import bigquery/polars on purpose
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]
"scripts/**" = ["T201"] # scripts intentionally print JSON to stdout
# marimo cells use bare trailing expressions as the cell's display value (B018)
# and marimo's save format ends every cell function with a bare return (PLR1711).
"templates/notebook_template.py" = ["B018", "PLR1711"]
"analyses/**" = ["B018", "F401", "PLR1711"]

[tool.ruff.lint.isort]
known-first-party = ["data_lagoon"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
